--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "public/weeResume"]
-	path = public/weeResume
+[submodule "harpapp/public/weeResume"]
+	path = harpapp/public/weeResume
 	url = https://github.com/AndrewNoNumbers/weeResume.git
